# trooper

./: .cursorrules  .env.template  .gitignore  README.md  __init__.py  commands  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
assets/audio/: README.md
assets/quotes/: stormtrooper_quotes.txt
config/: __init__.py  audio_effects.py  motion_responses.yaml  quotes.yaml  settings.py
docs/: requirements.md  stormtrooper_quotes.yaml  stormtrooper_voice_effects_and_tuning_guide.md
examples/: __init__.py  realtime_tts_demo.py  text_to_speech.py
scripts/: generate_audio_files.py  generate_polly_files.py  generate_processed_quotes.py
src/: __init__.py
src/ai/: __init__.py  lex_client.py  response_generator.py
src/audio/: __init__.py  effects.py  exceptions.py  play_samples.py  player.py  polly.py  process_samples.py  processor.py  realtime.py  recorder.py  voice_test.py
src/audio/tests/: __init__.py  test_audio.py  test_urgency_effects.py
src/cli/: trooper.py
src/motion/: __init__.py  constants.py  handler.py  pir_handler.py  simulator.py  strategy.py  test_motion.py  types.py
src/movement/: __init__.py  servo_controller.py
src/quotes/: test_quotes.py
tests/: conftest.py
