[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trooper"
version = "0.1.0"
description = "Stormtrooper Voice Assistant with motion detection and audio effects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "sounddevice",
    "loguru",
    "pyyaml",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "build",
]

[project.scripts]
trooper = "src.cli.trooper:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = [
    "unused-import",
    "broad-exception-caught",
    "wrong-import-position",
    "trailing-whitespace",
    "line-too-long",
    "missing-final-newline",
    "import-error",  # Handles import resolution issues
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["e", "f", "i", "j", "k", "n", "x", "y", "z", "fp", "id", "_"]

[tool.pylint.design]
max-args = 10
max-attributes = 10
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 1 